fix: made h1 tag align in center

--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body
 }
 h1{
 	font-family: monospace;
+	color: #111;
 }
 h2
 {
